WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155730
putByIndexBeyondVectorLengthWithoutAttributes should not crash if it can't ensureLength
https://bugs.webkit.org/show_bug.cgi?id=155730
Summary
putByIndexBeyondVectorLengthWithoutAttributes should not crash if it can't en...
Keith Miller
Reported
2016-03-21 13:03:16 PDT
putByIndexBeyondVectorLength should not crash if it cannot increase the size of its butterfly
Attachments
Patch
(6.52 KB, patch)
2016-03-24 14:45 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2016-03-24 14:45:35 PDT
Created
attachment 274856
[details]
Patch
Saam Barati
Comment 2
2016-03-24 15:31:39 PDT
Comment on
attachment 274856
[details]
Patch can you add a test?
Keith Miller
Comment 3
2016-03-25 10:16:13 PDT
> can you add a test?
I don't have a test this is just a fix to what I suspect is the cause of on of our top crashers. We hit the RELEASE_ASSERT in putByIndexBeyondVectorLengthWithoutAttributes. The only way I see to hit that assert is to fail on the reallocation of the butterfly.
Keith Miller
Comment 4
2016-03-25 10:16:46 PDT
<
rdar://problem/22570509
>
WebKit Commit Bot
Comment 5
2016-03-25 11:07:38 PDT
Comment on
attachment 274856
[details]
Patch Clearing flags on attachment: 274856 Committed
r198676
: <
http://trac.webkit.org/changeset/198676
>
WebKit Commit Bot
Comment 6
2016-03-25 11:07:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug