putByIndexBeyondVectorLengthWithoutAttributes should not crash if it can't ensureLength https://bugs.webkit.org/show_bug.cgi?id=155730

Reviewed by Saam Barati.

This patch makes ensureLength return a boolean indicating if it was able to set the length.
ensureLength also no longer sets the butterfly to null if the allocation of the butterfly
fails. All of ensureLengths callers including putByIndexBeyondVectorLengthWithoutAttributes
have been adapted to throw an out of memory error if ensureLength fails.

* runtime/JSArray.cpp:
(JSC::JSArray::setLength):
(JSC::JSArray::unshiftCountWithAnyIndexingType):
* runtime/JSObject.cpp:
(JSC::JSObject::putByIndexBeyondVectorLengthWithoutAttributes):
(JSC::JSObject::ensureLengthSlow):
* runtime/JSObject.h:
(JSC::JSObject::ensureLength):


Canonical link: https://commits.webkit.org/173984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198676 268f45cc-cd09-0410-ab3c-d52691b4dbfc