Source/JavaScriptCore/runtime/JSObject.cpp
@@ -2235,7 +2235,10 @@ bool JSObject::putByIndexBeyondVectorLengthWithoutAttributes(ExecState* exec, un
         return result;
     }
 
-    ensureLength(vm, i + 1);
+    if (!ensureLength(vm, i + 1)) {
+        throwOutOfMemoryError(exec);
+        return false;
+    }
     butterfly = m_butterfly.get();
 
     RELEASE_ASSERT(i < butterfly->vectorLength());
@@ -2753,7 +2756,7 @@ bool JSObject::increaseVectorLength(VM& vm, unsigned newLength)
     return true;
 }
 
-void JSObject::ensureLengthSlow(VM& vm, unsigned length)
+bool JSObject::ensureLengthSlow(VM& vm, unsigned length)
 {
     Butterfly* butterfly = m_butterfly.get();
     
@@ -2770,6 +2773,8 @@ void JSObject::ensureLengthSlow(VM& vm, unsigned length)
         vm, this, structure(), structure()->outOfLineCapacity(), true,
         oldVectorLength * sizeof(EncodedJSValue),
         newVectorLength * sizeof(EncodedJSValue));
+    if (!butterfly)
+        return false;
     m_butterfly.set(vm, this, butterfly);
 
     butterfly->setVectorLength(newVectorLength);
@@ -2778,6 +2783,7 @@ void JSObject::ensureLengthSlow(VM& vm, unsigned length)
         for (unsigned i = oldVectorLength; i < newVectorLength; ++i)
             butterfly->contiguousDouble().data()[i] = PNaN;
     }
+    return true;
 }
 
 void JSObject::reallocateAndShrinkButterfly(VM& vm, unsigned length)
